# wikid

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  azure-pipelines.yml  coref-test.py  draft_fuzzy_search_with_annoy.py  project.yml  requirements.txt  setup.cfg  setup.py  test_project.py  test_wikid.py  test_wikikb.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
configs/: meta_terms.yaml  skip_terms.yaml
scripts/: __init__.py  cli_create_kb.py  cli_extract_demo_dump.py  cli_parse.py  create_kb.py  extract_demo_wiki_dump.py  kb.py  parse.py  parse_wiki_dumps.py  utils.py
scripts/extraction/: __init__.py  ddl.sql  schemas.py  utils.py  wikidata.py  wikipedia.py
scripts/wiki/: __init__.py  ddl.sql  download.sh  kb.py  wiki_dump_api.py  wikidata.py  wikipedia.py
src/: __init__.py  cli_extract_demo_dump.py  cli_parse.py  kb.py
src/extraction/: compat.py  ddl.sql  schemas.py  utils.py  wikidata.py  wikipedia.py
