[metadata]
description = Generate a SQLite database from Wikipedia & Wikidata dumps
url = https://spacy.io
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/explosion/wikid

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.7
setup_requires =
    pytest
    pre-commit
install_requires =
    spacy
    pyyaml
    tqdm
    prettytable

[flake8]
ignore = E203, E266, E501, E731, W503, E741, F541, W605
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
    _tokenizer_exceptions_list.py,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
allow_redefinition = True